<resources>
    <string name="app_name">Bluetooth</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop_command">Stop Command</string>
    <string name="abort_stop_command">Abort Stop Command</string>
    <string name="seven_minutes_elapsed">7 minutes elapsed</string>
    <string name="start_isometric">Start Isometric</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="tare">Tare</string>

    <string name="disconnected">Disconnected</string>

</resources>
